Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-853

Plugin examples should be updated to use the sockaddr API instead of the deprecated int style API.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 3.0.0
    • 3.1.0
    • Plugins
    • None

    Description

      For 3.0 the IP address related API was changed to use sockaddr instead of int for IP addresses in preparation for IPv6 compatibility. The old functions were marked deprecated. The example plugins should use the sockaddr interface and not the deprecated interface.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            amc Alan M. Carroll
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: