TS-853 Plugin examples should be updated to use the sockaddr API instead of the deprecated int style API.

This doesn't address IPv6 compatibility in every place, rewrites
of these example plugins would be necessary for that. But at least
we use the appropriate APIs now.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1146382 13f79535-47bb-0310-9956-ffa450edef68